# remoteApi

./: CMakeLists.txt  extApi.c  extApi.h  extApiPlatform.c  license.txt
